# bot

js/: package.json
js/src/: index.ts  instructions.ts  main.ts  secondary_bindings.ts  state.ts  test.ts  types.ts  utils.ts
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
