[package]
name = "solindex-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []
test-bpf = []
fuzz = ["arbitrary", "honggfuzz", "solana-sdk", "rand", "solana-program-test", "tokio", "futures"]

[dependencies]
solana-program = "1.5.6"
thiserror = "1.0.23"
num-traits = "0.2"
num-derive = "0.3"
arrayref = "0.3.6"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}
serum_dex = {git = "https://github.com/project-serum/serum-dex.git", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.2", features = ["no-entrypoint"]}
arbitrary = { version = "1", features = ["derive"], optional = true }
honggfuzz = { version = "0.5", optional = true }
solana-sdk = {version = "1.5.0", optional = true}

rand = {version = "0.8.3", optional = true }
solana-program-test = {version = "1.5.0", optional = true}
tokio = { version = "0.3", features = ["macros"], optional = true}
futures = {version = "0.3", optional = true }

[dev-dependencies]
solana-sdk = {version = "1.5.0"}
solana-client = "1.5.0"
rand = {version = "0.8.3" }
solana-program-test = {version = "1.5.0"}
tokio = { version = "0.3", features = ["macros"]}
futures = {version = "0.3" }

[lib]
crate-type = ["cdylib", "lib"]